--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -295,7 +295,11 @@ nopacutobs <- nopaobs[(nopaobs$DateTimect >= as.POSIXct("2019-06-06 09:18:00") &
 allcut <- rbind(Marbcutobs, BrsScutobs, cmprcutobs, nopacutobs)
 # write.xlsx(allcut, file = "allcutVisitationData122719.xlsx")
 ```
-I then created figures of the number of individual sheep coming into water by day. When examining the data, I noticed that the days at the beginning and end of each period when all of the cameras were running had a lower number of sheep coming in than the rest of the days. This is easily attributable to the cameras being up and running for only part of these days. As such, I cut out these days from my dataset (which probably decreased by dataset by about ~20%). For the Marbles, I did leave in one day when the cameras were only not running between 11 pm and 12 am. I figured that this is acceptable given the extreme bias of sheep for diurnality, which was confirmed when going through the camera photos. I will need to limit other analyses to these time periods given the incomplete data on the start/end days.
+I then created figures of the number of individual sheep coming into water by day. I only included times when all cameras in the mountain range were running. This is given that sheep use more than one water source and move around throughout the mountain range. When examining the data, I noticed that the days at the beginning and end of each period when all of the cameras were running had a lower number of sheep coming in than the rest of the days. This is easily attributable to the cameras being up and running for only part of these days. As such, I cut out these days from my dataset (which probably decreased by dataset by about ~20%). 
+
+I did leave in a couple of days that had very near complete coverage. I decided that it was ok to keep these days given the short periods of time when 1 of the cameras was down for, and the relative bias of sheep for diurnality, which was confirmed when going through camera photos. For the Marbles, I did leave in one day when the cameras were only not running between 11 pm and 12 am. In the South Bristols, I included 6/25/19 which was not fully covered for 45 minutes. In the Castle Piutes, I included 7/14 and 8/3 because one of the cameras went out at night. I will need to limit other analyses to these time periods given the incomplete data on the start/end days.
+
+Afterwards, I realized that the plots that I made here are not nearly as useful as percent visitation by day, as I did in the next chunk.
 
 
 ```{r}
@@ -420,7 +424,7 @@ plotcmprnumsheep <- ggplot(data = cmprindsheepvisitperday2, aes(x = Date, y = Nu
 # grid.arrange(plotmarbnumsheep, plotsbrsnumsheep, plotnopasheepnum, plotcmprnumsheep, nrow = 2, top = "Number of Individual Sheep Coming to Water by Day")
 
 ```
-Percent of Individual Sheep Coming into Water by Day
+I then made figures of the percent of individual sheep coming into water by day. Given the extreme difference in the number of sheep between different mountain ranges, I also included the absolute number of sheep coming in as a secondary y axis. For the Marbles, the absolute number of collared sheep decreases towards the end of the summer due to multiple mortalities.
 ```{r}
 
 # MARBLES - need to wait until Lily gets back to me with dead sheep.
@@ -451,9 +455,7 @@ grid.arrange(plotsbrspercentsheep1, plotnopapercentsheep1, plotcmprpercentsheep1
 # grid.arrange(plotmarbnumsheep, plotsbrsnumsheep, plotnopasheepnum, plotcmprnumsheep, nrow = 2, top = "Number of Individual Sheep Coming to Water by Day")
 
 ```
-
-
-
+I then made figures of the mean number of visits per day by collared sheep. The error bars are the standard deviations around the mean for a given day.
 ```{r}
 # Mean Number of Visits Per Day for all sheep (and Standard Deviations)
  
@@ -570,6 +572,17 @@ cmprrd11plot <- ggplot(data = cmprrd11, aes(x = Date, y = Meannumvisits)) + geom
 library(gridExtra)
 grid.arrange(p, sbrsrd11plot, nopard11plot, cmprrd11plot, nrow = 2, top = "Mean Number of Visits Per Day Given All Collared Sheep")
 ```
+I then ran statistics associated with the previous figures.
+- whether there is a significant difference in the number of collared sheep visiting water among months within each mountain range
+- whether there is a significant difference in the mean number of visitations of collared sheep visiting water among months within each mountain range
+- whether there is a significant difference in the percent of collared sheep visiting water between mountain ranges 
+
+
+```{r}
+
+
+```
+
 
 ```{r}
 # Time between sheep coming into water
