--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -367,8 +367,10 @@ print(plotmarbnumsheep)
 
 # SOUTH BRISTOLS
 
+#### NEED TO CHECK AND POTENTIALLY FIX BHS_1499 from Talc Mine 6/23/19 10:04 am. ALso BHS_1591 Teresa Seep 7/19 21:59 and 7/20 2:43 - probably need to change to Marb.
+
 sbrssheepvisitsday <- as.data.frame(table(BrsScutobs$KI_Known_ID, BrsScutobs$GO_Date))
-sbrssheepvisitsday1 <- sbrssheepvisitsday[(sbrssheepvisitsday$Var1 == "BHS_1330") | (sbrssheepvisitsday$Var1 == "BHS_1340") | (sbrssheepvisitsday$Var1 == "BHS_1337") | (sbrssheepvisitsday$Var1 == "BHS_1334") | (sbrssheepvisitsday$Var1 == "BHS_1331") | (sbrssheepvisitsday$Var1 == "BHS_1329") | (sbrssheepvisitsday$Var1 == "BHS_1328") | (sbrssheepvisitsday$Var1 == "BHS_1333") | (sbrssheepvisitsday$Var1 == "BHS_1425") | (sbrssheepvisitsday$Var1 == "BHS_1426") | (sbrssheepvisitsday$Var1 == "BHS_1489") | (sbrssheepvisitsday$Var1 == "BHS_1491") | (sbrssheepvisitsday$Var1 == "BHS_1578") | (sbrssheepvisitsday$Var1 == "BHS_1579") | (sbrssheepvisitsday$Var1 == "BHS_1580") | (sbrssheepvisitsday$Var1 == "BHS_1596") | (sbrssheepvisitsday$Var1 == "BHS_1598") | (sbrssheepvisitsday$Var1 == "BHS_1599") | (sbrssheepvisitsday$Var1 == "BHS_1687") | (sbrssheepvisitsday$Var1 == "BHS_1486") | (sbrssheepvisitsday$Var1 == "BHS_1490") | (sbrssheepvisitsday$Var1 == "BHS_1492") | (sbrssheepvisitsday$Var1 == "BHS_1428") | (sbrssheepvisitsday$Var1 == "BHS_1685") | (sbrssheepvisitsday$Var1 == "BHS_1686") | (sbrssheepvisitsday$Var1 == "BHS_1688") | (sbrssheepvisitsday$Var1 == "BHS_1689"),]
+sbrssheepvisitsday1 <- sbrssheepvisitsday[(sbrssheepvisitsday$Var1 == "BHS_1330") | (sbrssheepvisitsday$Var1 == "BHS_1340") | (sbrssheepvisitsday$Var1 == "BHS_1337") | (sbrssheepvisitsday$Var1 == "BHS_1334") | (sbrssheepvisitsday$Var1 == "BHS_1329") | (sbrssheepvisitsday$Var1 == "BHS_1328") | (sbrssheepvisitsday$Var1 == "BHS_1333") | (sbrssheepvisitsday$Var1 == "BHS_1425") | (sbrssheepvisitsday$Var1 == "BHS_1426") | (sbrssheepvisitsday$Var1 == "BHS_1489") | (sbrssheepvisitsday$Var1 == "BHS_1491") | (sbrssheepvisitsday$Var1 == "BHS_1578") | (sbrssheepvisitsday$Var1 == "BHS_1579") | (sbrssheepvisitsday$Var1 == "BHS_1580") | (sbrssheepvisitsday$Var1 == "BHS_1596") | (sbrssheepvisitsday$Var1 == "BHS_1599") | (sbrssheepvisitsday$Var1 == "BHS_1687") | (sbrssheepvisitsday$Var1 == "BHS_1486") | (sbrssheepvisitsday$Var1 == "BHS_1490") | (sbrssheepvisitsday$Var1 == "BHS_1492") | (sbrssheepvisitsday$Var1 == "BHS_1428") | (sbrssheepvisitsday$Var1 == "BHS_1685") | (sbrssheepvisitsday$Var1 == "BHS_1686") | (sbrssheepvisitsday$Var1 == "BHS_1688") | (sbrssheepvisitsday$Var1 == "BHS_1689"),]
 # table(sbrssheepvisitsday1$Freq) - through 5
 sbrssheepvisitsday1$Freq[sbrssheepvisitsday1$Freq == 2] <- 1
 sbrssheepvisitsday1$Freq[sbrssheepvisitsday1$Freq == 3] <- 1
@@ -439,14 +441,20 @@ I then made figures of the percent of individual sheep coming into water by day.
 ```{r}
 
 # MARBLES
-# 32 includes 1496 and 1497.
 # 31 does not include 1496.
+# Had to change the total number because sheep died.
+# 1367: heard dead on flight on 8/19, last seen 6/12 at Theresa - therefore assume must assume died 6/12, 
+# 1595: Died 8/5 or 6th, stopped moving on the 5th, last day to include is the 4th
 
-# NEED TO FIX NUMBER GOING DOWN FROM 31- DEAD MARBLES SHEEP!!!!
-marbindsheepvisitperday1$TotalNumSheep <- 31
+marbindsheepvisitperday1$TotalNumSheep <- NA
+marbindsheepvisitperday1$TotalNumSheep <- as.character(marbindsheepvisitperday1$TotalNumSheep)
+marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <= as.Date("2019-06-12"))] <- 31
+marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` >= as.Date("2019-06-13")) & (marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <= as.Date("2019-08-04"))] <- 30
+marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` >= as.Date("2019-08-05"))] <- 29
+
 marbindsheepvisitperday1$Percentvisited <- (marbindsheepvisitperday1$visits / marbindsheepvisitperday1$TotalNumSheep)
 library(ggplot2)
-plotmarbpercentsheep <- ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = Percentvisited, fill = "supp")) + geom_bar(stat = "identity", color = "black") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-15"))) + ggtitle("Marbles (n = 31)") + xlab("Date") + ylab("Percent of Sheep") + theme(legend.position = "none") + ylim(0, 1)
+plotmarbpercentsheep <- ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = Percentvisited, fill = "supp")) + geom_bar(stat = "identity", color = "black") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-15"))) + ggtitle("Marbles (n = 31*)") + xlab("Date") + ylab("Percent of Sheep") + theme(legend.position = "none") + ylim(0, 1)
 plotmarbpercentsheep1 <- plotmarbpercentsheep %+% scale_y_continuous((name = "Percent of Collared Sheep"), sec.axis = sec_axis(~. * 31, name = "Number of Collared Sheep"))
 print(plotmarbpercentsheep1)
 
