--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -370,7 +370,7 @@ print(plotmarbnumsheep)
 #### NEED TO CHECK AND POTENTIALLY FIX BHS_1499 from Talc Mine 6/23/19 10:04 am. ALso BHS_1591 Teresa Seep 7/19 21:59 and 7/20 2:43 - probably need to change to Marb.
 
 sbrssheepvisitsday <- as.data.frame(table(BrsScutobs$KI_Known_ID, BrsScutobs$GO_Date))
-sbrssheepvisitsday1 <- sbrssheepvisitsday[(sbrssheepvisitsday$Var1 == "BHS_1330") | (sbrssheepvisitsday$Var1 == "BHS_1340") | (sbrssheepvisitsday$Var1 == "BHS_1337") | (sbrssheepvisitsday$Var1 == "BHS_1334") | (sbrssheepvisitsday$Var1 == "BHS_1329") | (sbrssheepvisitsday$Var1 == "BHS_1328") | (sbrssheepvisitsday$Var1 == "BHS_1333") | (sbrssheepvisitsday$Var1 == "BHS_1425") | (sbrssheepvisitsday$Var1 == "BHS_1426") | (sbrssheepvisitsday$Var1 == "BHS_1489") | (sbrssheepvisitsday$Var1 == "BHS_1491") | (sbrssheepvisitsday$Var1 == "BHS_1578") | (sbrssheepvisitsday$Var1 == "BHS_1579") | (sbrssheepvisitsday$Var1 == "BHS_1580") | (sbrssheepvisitsday$Var1 == "BHS_1596") | (sbrssheepvisitsday$Var1 == "BHS_1599") | (sbrssheepvisitsday$Var1 == "BHS_1687") | (sbrssheepvisitsday$Var1 == "BHS_1486") | (sbrssheepvisitsday$Var1 == "BHS_1490") | (sbrssheepvisitsday$Var1 == "BHS_1492") | (sbrssheepvisitsday$Var1 == "BHS_1428") | (sbrssheepvisitsday$Var1 == "BHS_1685") | (sbrssheepvisitsday$Var1 == "BHS_1686") | (sbrssheepvisitsday$Var1 == "BHS_1688") | (sbrssheepvisitsday$Var1 == "BHS_1689"),]
+sbrssheepvisitsday1 <- sbrssheepvisitsday[(sbrssheepvisitsday$Var1 == "BHS_1330") | (sbrssheepvisitsday$Var1 == "BHS_1337") | (sbrssheepvisitsday$Var1 == "BHS_1334") | (sbrssheepvisitsday$Var1 == "BHS_1329") | (sbrssheepvisitsday$Var1 == "BHS_1328") | (sbrssheepvisitsday$Var1 == "BHS_1333") | (sbrssheepvisitsday$Var1 == "BHS_1425") | (sbrssheepvisitsday$Var1 == "BHS_1426") | (sbrssheepvisitsday$Var1 == "BHS_1489") | (sbrssheepvisitsday$Var1 == "BHS_1491") | (sbrssheepvisitsday$Var1 == "BHS_1578") | (sbrssheepvisitsday$Var1 == "BHS_1579") | (sbrssheepvisitsday$Var1 == "BHS_1580") | (sbrssheepvisitsday$Var1 == "BHS_1596") | (sbrssheepvisitsday$Var1 == "BHS_1599") | (sbrssheepvisitsday$Var1 == "BHS_1687") | (sbrssheepvisitsday$Var1 == "BHS_1486") | (sbrssheepvisitsday$Var1 == "BHS_1490") | (sbrssheepvisitsday$Var1 == "BHS_1492") | (sbrssheepvisitsday$Var1 == "BHS_1428") | (sbrssheepvisitsday$Var1 == "BHS_1685") | (sbrssheepvisitsday$Var1 == "BHS_1686") | (sbrssheepvisitsday$Var1 == "BHS_1688") | (sbrssheepvisitsday$Var1 == "BHS_1689"),]
 # table(sbrssheepvisitsday1$Freq) - through 5
 sbrssheepvisitsday1$Freq[sbrssheepvisitsday1$Freq == 2] <- 1
 sbrssheepvisitsday1$Freq[sbrssheepvisitsday1$Freq == 3] <- 1
